--- a/01-find-data.ipynb
+++ b/01-find-data.ipynb
@@ -2,39 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-18T14:22:46.679090Z",
+     "start_time": "2024-04-18T14:22:46.658650Z"
+    }
+   },
    "source": [
     "with open(\"ocr/09.txt\", \"r\", encoding=\"utf-8\") as f:\n",
     "    data = f.read()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "768"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-17T09:43:45.467956Z",
+     "start_time": "2024-04-17T09:43:45.454363Z"
     }
-   ],
+   },
    "source": [
     "sections = data.split(\"\\n\")\n",
-    "len(sections)"
-   ]
+    "print(sections[:2], len(sections))"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['News Bulletin of the International Defence & Aid Fund ', 'S '] 768\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-17T09:43:45.633193Z",
+     "start_time": "2024-04-17T09:43:45.567636Z"
+    }
+   },
+   "source": [
+    "training_data = []\n",
+    "for s in sections:\n",
+    "    if \"(\" in s:\n",
+    "        training_data.append({\"text\": s.strip()})\n",
+    "len(training_data)"
+   ],
    "outputs": [
     {
      "data": {
@@ -47,18 +65,19 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "training_data = []\n",
-    "for s in sections:\n",
-    "    if \"(\" in s:\n",
-    "        training_data.append({\"text\": s.strip()})\n",
-    "len(training_data)"
-   ]
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-17T09:43:45.713013Z",
+     "start_time": "2024-04-17T09:43:45.705255Z"
+    }
+   },
+   "source": [
+    "print(training_data[1])"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -68,34 +87,47 @@
      ]
     }
    ],
-   "source": [
-    "print(training_data[1])"
-   ]
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-17T09:44:00.281014Z",
+     "start_time": "2024-04-17T09:43:45.782182Z"
+    }
+   },
    "source": [
     "import srsly"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-17T09:44:00.296266Z",
+     "start_time": "2024-04-17T09:44:00.285896Z"
+    }
+   },
    "source": [
     "srsly.write_jsonl(\"data/focus_input.jsonl\", training_data)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 6
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-17T09:44:00.304536Z",
+     "start_time": "2024-04-17T09:44:00.299566Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": 6
   }
  ],
  "metadata": {
